<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="evaluate">See Result</string>
    <string name="result">Result</string>
    <string name="add_string">Add</string>
    <string name="multiply_string">Multiply</string>
    <string name="first_operand">Operand #1</string>
    <string name="second_operand">Operand #2</string>
</resources>